--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,5 +1,20 @@
-.App {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+#root {
+    display: flex;
+    justify-content: center;
+}
+
+.App {
+    display: flex;
+    justify-content: center;
+    max-width: 1300px;
+    width: 100%;
+    height: 100vh;
+    border: 1px solid black;
+    font-family: Arial, Helvetica, sans-serif;
 }
