--- a/src/style/App.css
+++ b/src/style/App.css
@@ -14,6 +14,7 @@
     justify-content: center;
     max-width: 1300px;
     width: 100%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    background-color: rgba(10, 53, 44, 0.144);
     font-family: Arial, Helvetica, sans-serif;
 }
