--- a/src/style/SelectedHotel.css
+++ b/src/style/SelectedHotel.css
@@ -1,3 +1,27 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: auto;
+}
+
+.btn-back {
+    display: flex;
+    align-self: flex-start;
+}
+
+.filter {
+    display: flex;
+    align-items: center;
+    margin: 10px 10px 30px 10px;
+    padding: 10px;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    max-width: 1000px;
+    width: 100%;
+}
+
 .img-placeholder {
     max-width: 400px;
     width: 100%;
