--- a/src/style/Carousel.css
+++ b/src/style/Carousel.css
@@ -5,7 +5,7 @@
     max-width: 400px;
     width: 100%;
     height: 450px;
-    background-color: gainsboro;
+    background-color: rgba(220, 220, 220, 0.404);
 }
 
 .carousel-img {
@@ -19,5 +19,11 @@
     height: 100%;
     display: flex;
     align-items: center;
+}
+
+@media only screen and (max-width: 340px) {
+    .carousel-container {
+        height: 350px;
+    }
 }
 
